# marauders

./: Cargo.toml  README.md  marauders-installer.sh
.github/workflows/: release.yml
src/: algebra.rs  api.rs  cli.rs  code.rs  commands.rs  comment.pest  import_rust_mutants_cli.rs  languages.rs  lib.rs  main.rs  parser.rs  project.rs  variation.rs
src/syntax/: comment.pest  comment.rs  functional.pest  functional.rs  macros.pest  match_replace.rs  mod.rs  patch.rs  preprocessor.rs
src/syntax/functional/: core.rs  rust.rs
test/: BST.v  RBT.v  STLC.v  fact.kl  marauder.toml
test/cn/: bst.c
test/coq/: BST.v  RBT.v
test/custom/: fact.kl
test/haskell/: BST.hs
test/python/: bst.py
test/rocq/: RBT.v  STLC.v
test/rust/: bst.rs  bst_functional.rs  calc.rs  calc_mut.rs  limbo.rs
test/rust/diffs/: calc.rs_line_2_col_5.diff  calc.rs_line_2_col_5_001.diff  calc.rs_line_2_col_5_002.diff  calc.rs_line_2_col_7.diff  calc.rs_line_2_col_7_001.diff
